--- a/docs/Using the Bot.org
+++ b/docs/Using the Bot.org
@@ -6,7 +6,7 @@ The prefix for running commands for the Kindling Bot is ~%~.
 
 ** Help Command
 
-Using the ~%help~ command will output the list of *available commands* and how to
+Using the ~%help~ command will output the list of available commands and how to
 use them.
 
 #+begin_src text
@@ -17,9 +17,10 @@ use them.
 
 ** Announce Command
 
-Using the ~%announce~ command, *administrators* can schedule announcement ahead
-of time. The scheduled announcements are made in our server's ~# announcements~
-channel. To stop the announcement process at any time, type ~cancel~.
+Using the ~%announce~ command, administrators can schedule announcement ahead
+of time. The scheduled announcements are made in our server's
+~# announcements~ channel. To stop the announcement process at any time,
+type ~cancel~.
 
 #+begin_src text
 %announce
@@ -73,8 +74,8 @@ channel. To stop the announcement process at any time, type ~cancel~.
 
 ** Poll Command
 
-Using the ~%newpoll~ command *administrators* can starting a poll with a
-maximum of *12* options. Other users can react to the poll to cast a vote.
+Using the ~%newpoll~ command administrators can starting a poll with a
+maximum of ~12~ options. Other users can react to the poll to cast a vote.
 The first set of reactions will be generated automatically.
 
 #+begin_src text
@@ -85,6 +86,6 @@ The first set of reactions will be generated automatically.
 
    [[./img_docs/newpoll-command-1.png]]
 
-2. The *Total Votes* count will update with each vote cast
+2. The ~Total Votes~ count will update with each vote cast
 
    [[./img_docs/newpoll-command-2.png]]
