--- a/docs/using-the-bot.org
+++ b/docs/using-the-bot.org
@@ -1,4 +1,6 @@
-#+TITLE: Using the Kingling Bot
+#+TITLE: Using the Kindling Bot
+
+<small><i><a href='http://ecotrust-canada.github.io/markdown-toc/'>Table of contents generated with markdown-toc</a></i></small>
 
 ** Command Prefix
 
